@@ -31,6 +31,7 @@ import java.util.Map;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 
+import static java.lang.Integer.MAX_VALUE;
 import static java.lang.Math.max;
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonList;
@@ -181,7 +182,11 @@ public class PlantLayerEditor extends AbstractLayerEditor<PlantLayer> {
     private void initPlantControls() {
         JPanel panel = new JPanel(new GridBagLayout());
         panelPlantControls.add(panel);
-        addCategory(panel, PLANTS_AND_FLOWERS);
+        addCategory(panel, "Plants and flowers", 0, 18, false, PLANTS_AND_FLOWERS);
+        addFiller(panel);
+        panel = new JPanel(new GridBagLayout());
+        panelPlantControls.add(panel);
+        addCategory(panel, "", 18, MAX_VALUE, true, PLANTS_AND_FLOWERS);
         addFiller(panel);
         panel = new JPanel(new GridBagLayout());
         panelPlantControls.add(panel);
@@ -199,33 +204,45 @@ public class PlantLayerEditor extends AbstractLayerEditor<PlantLayer> {
     }
 
     private void addCategory(JPanel panel, Category category) {
-        addCategory(panel, m(category), category);
+        addCategory(panel, m(category), null, 0, MAX_VALUE, true, category);
     }
 
     private void addCategory(JPanel panel, String title, Category... categories) {
-        addCategory(panel, title, null, categories);
+        addCategory(panel, title, null, 0, MAX_VALUE, true, categories);
     }
 
     private void addCategory(JPanel panel, String title, String subTitle, Category... categories) {
+        addCategory(panel, title, subTitle, 0, MAX_VALUE, true, categories);
+    }
+
+    private void addCategory(JPanel panel, String title, int firstRow, int rowCount, boolean includeGrowth, Category... categories) {
+        addCategory(panel, title, null, firstRow, rowCount, includeGrowth, categories);
+    }
+
+    private void addCategory(JPanel panel, String title, String subTitle, int firstRow, int rowCount, boolean includeGrowth, Category... categories) {
         final boolean newColumn = panel.getComponentCount() == 0;
         final GridBagConstraints constraints = new GridBagConstraints();
-        constraints.gridwidth = newColumn ? 3 : GridBagConstraints.REMAINDER;
+        constraints.gridwidth = (includeGrowth && newColumn) ? 3 : GridBagConstraints.REMAINDER;
         constraints.anchor = GridBagConstraints.BASELINE_LEADING;
         constraints.insets = new Insets(4, 0, 4, 0);
         panel.add(new JLabel("<html><b>" + title + "</b></html>"), constraints);
         constraints.gridwidth = GridBagConstraints.REMAINDER;
-        if (newColumn) {
+        if (includeGrowth && newColumn) {
             panel.add(new JLabel("Growth:"), constraints);
         }
         if (subTitle != null) {
             panel.add(new JLabel(subTitle), constraints);
         }
         final Platform platform = context.getDimension().getWorld().getPlatform();
+        int row = 0;
         for (Category category: categories) {
             for (int i = 0; i < ALL_PLANTS.length; i++) {
                 final Plant plant = ALL_PLANTS[i];
                 if (plant.getCategories()[0] == category) {
-                    addPlantRow(panel, plant, i, isCompatibleWithPlatform(plant, platform));
+                    if ((row >= firstRow) && ((rowCount == MAX_VALUE) || (row < (firstRow + rowCount)))) {
+                        addPlantRow(panel, plant, i, isCompatibleWithPlatform(plant, platform));
+                    }
+                    row++;
                 }
             }
         }
